# Project_SIRE

./: .gitignore  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  EXECUTIVE_SUMMARY.md  HF_DEPLOYMENT_RUNBOOK.md  HF_SPACE_README.md  JUDGE_QA.md  PARTICIPANT_PROFILE.md  PHASE_CLOSURE_STATUS.md  PROJECT_BRIEF.md  RL_AI_USAGE.md  SECURITY_SECRETS.md  SUBMISSION_CHECKLIST.md
frontend/: app.js  index.html  styles.css
scripts/: github_publish_safe.sh  hf_predeploy_check.sh  hf_space_publish_safe.sh  pre_submission_check.sh  scaler_gate_check.sh
server/: app.py
sire_env/: __init__.py  baseline_policy.py  environment_core.py  evaluation_grader.py  incident_state.py
tasks/: graders.py  task_definitions.py
validation/: phase3_inference_success_summary.txt  phase3_preflight_report.txt  phase4_continuation_readiness_report.txt  phase4_deployment_readiness_report.txt  phase4_docs_and_submission_prep_report.txt  phase4_publish_attempt_report.txt  phase5_handoff_blockers_and_next_steps.txt  scaler_pre_submission_gate_report.txt  scaler_submission_followup_report.txt  scaler_submission_start_report.txt
